fixed stats alignment

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -729,6 +729,10 @@ pre {
       padding-right: 15px;
       padding-left: 15px; } }
 
+.col-lg-3 .col-md-6 .col-xs-12 {
+  margin: 35px;
+}
+
 .col {
   -ms-flex-preferred-size: 0;
       flex-basis: 0;
